--- a/Views/layout/main-layout.hbs
+++ b/Views/layout/main-layout.hbs
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{pageTitle}}</title>
     <link rel="stylesheet" href="/css/main.css">
-    {{#block "styles"}}
-    {{/block}}
+    {{#styles}}
+    {{/styles}}
 </head>
 <body>
     <header class="main-header">
         <nav class="main-header__nav">
             <ul class="main-header__item-list">
                 <li class="main-header__item">
-                    <a class="active" href="/">Shop</a>
+                    <a class="{{#if (path === '/')}}active{{/if}}" href="/">Shop</a>
                 </li>
                 <li class="main-header__item">
                     <a href="/admin/add-product" class="{{#if (path === '/admin/add-product')}}active{{/if}}">Add Product</a>
@@ -22,7 +22,7 @@
             </ul>
         </nav>
     </header>
-    {{#block "content"}}
-    {{/block}}
+    {{#content}}
+    {{/content}}
 </body>
 </html>
