--- a/Views/includes/navigation.ejs
+++ b/Views/includes/navigation.ejs
@@ -6,7 +6,7 @@
           </a>
         </li>
         <li class="main-header__item">
-          <a class="<%= path === '/product' ? 'active' : '' %>" href="/product">Product
+          <a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products
         </a>
       </li>
       <li class="main-header__item">
